--- a/manifest.plist
+++ b/manifest.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/ningcol/appPublic/raw/master/Icon-57.png</string>
+					<string>https://github.com/ningcol/appPublic/raw/master/image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/ningcol/appPublic/raw/master/Icon-512.png</string>
+					<string>https://github.com/ningcol/appPublic/raw/master/image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
