--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://a.fangstar.net/app/production/ios/install/412/fbionlineinstall412.ipa</string>
+					<string>https://raw.githubusercontent.com/ningcol/appPublic/master/Runner.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.fangstar.broker</string>
+				<string>com.ningcol.yibanren</string>
 				<key>bundle-version</key>
 				<string>1.0.0</string>
 				<key>kind</key>
